--- a/contact.html
+++ b/contact.html
@@ -11,38 +11,19 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="./assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <style>
-        body {
-            background: #f7dada;
-        }
 
-        img {
-            border-radius: 20px;
-            z-index: -2;
-
-
-        }
-
-        #contact {
-            position: relative;
-        }
-
-        .btn-floating {
-            top: 56%;
-            left: 39%;
-            z-index: 999;
-            position: absolute;
-        }
-    </style>
 </head>
 
 <body>
     <nav>
         <div class="nav-wrapper red lighten-3">
-            <a href="index.html" class="brand-logo center blue-grey-text text-darken-2"><img src="./assets/images/logo.png"
-                    alt="Jimi Loc Nguyen" style="height:100px"></a>
-           
+            <a href="index.html" class="brand-logo center blue-grey-text text-darken-2"><img
+                    src="./assets/images/logo.png" alt="Jimi Loc Nguyen" style="height:100px"></a>
+
             <ul id="nav-mobile" class="right hide-on-med-and-down grey-text">
+                <li><a href="index.html" class="grey-text text-darken-2">
+                        <h5>Home</h5>
+                    </a></li>
                 <li><a href="contact.html" class="grey-text text-darken-2">
                         <h5>Contact</h5>
                     </a></li>
@@ -50,10 +31,19 @@
                         <h5>Portfolio</h5>
                     </a></li>
             </ul>
+            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         </div>
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+        <ul id="slide-out" class="sidenav">
+
+            <li><a href="index.html"><i class="material-icons">cloud</i>Home</a></li>
+            <li><a href="contact.html"><i class="material-icons">contacts</i>Contact</a></li>
+            <li><a href="contact.html"><i class="material-icons">burst_mode</i>Portfolio</a></li>
+            <li>
+                <div class="divider"></div>
+            </li>
+
+            <li><a class="sidenav-close"><i class="material-icons">close</i>Close</a></li>
         </ul>
 
     </nav>
@@ -64,21 +54,26 @@
         <div class="row">
 
             <div class="col s12" id="contact">
-                    <button data-target="modal1" class="btn modal-trigger btn-floating btn-large waves-effect waves-light red lighten-2"><i
+                <button data-target="modal1"
+                    class="btn modal-trigger btn-floating btn-large waves-effect waves-light red lighten-2"><i
                         class="material-icons">contacts</i></button>
                 <div id="modal1" class="modal">
                     <div class="modal-content">
                         <h4>You want to talk to me?</h4>
                         <br>
-                        <p><h5>Email: jimilocn@gmail.com</h5></p>
-                        <p><h5>Cell: 616-648-5153</h5></p>
+                        <p>
+                            <h5>Email: jimilocn@gmail.com</h5>
+                        </p>
+                        <p>
+                            <h5>Cell: 616-648-5153</h5>
+                        </p>
                     </div>
                     <div class="modal-footer">
                         <a href="#!" class="modal-close waves-effect waves-green btn-flat"><i
                                 class="material-icons">thumb_up</i></a>
                     </div>
                 </div>
-                <img src="./assets/images/contact3.jpeg" alt="" style="width:100%">
+                <img src="./assets/images/contact3.jpeg" alt="" style="width:100%" id="contactbackground">
 
 
 
@@ -91,7 +86,7 @@
         <div class="container">
             <div class="row">
                 <div class="col m4 s12 center">
-                    <a class="white-text" href="www.linkedin.com/in/jimi-loc-nguyen">
+                    <a class="white-text" href="https://www.linkedin.com/in/jimi-loc-nguyen/" target="_blank">
                         <h5>Linkedin</h5>
                     </a>
 
@@ -99,12 +94,13 @@
                 </div>
                 <div class="col m4 s12 center">
                     <a class="white-text"
-                        href="https://docs.google.com/document/d/16hA0mp15azMN1fWAwkXd0oWcFXhpgxOL19_Bsbc8BUY/edit?usp=sharing">
+                        href="https://docs.google.com/document/d/16hA0mp15azMN1fWAwkXd0oWcFXhpgxOL19_Bsbc8BUY/edit?usp=sharing"
+                        target="_blank">
                         <h5>Resume</h5>
                     </a>
                 </div>
                 <div class="col m4 s12 center">
-                    <a class="white-text" href="https://github.com/jimilocn">
+                    <a class="white-text" href="https://github.com/jimilocn" target="_blank">
                         <h5>GitHub</h5>
                     </a>
                 </div>
@@ -116,8 +112,6 @@
             </div>
         </div>
     </footer>
-
-
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
