--- a/portfolio.html
+++ b/portfolio.html
@@ -11,29 +11,7 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="./assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
-    <style>
-        body {
-            background: #f7dada;
-        }
 
-        img {
-            border-radius: 20px;
-            z-index: -2;
-
-
-        }
-
-        #contact {
-            position: relative;
-        }
-
-        .btn-floating {
-            top: 56%;
-            left: 39%;
-            z-index: 999;
-            position: absolute;
-        }
-    </style>
 </head>
 
 <body>
@@ -43,6 +21,9 @@
                     src="./assets/images/logo.png" alt="Jimi Loc Nguyen" style="height:100px"></a>
 
             <ul id="nav-mobile" class="right hide-on-med-and-down grey-text">
+                <li><a href="index.html" class="grey-text text-darken-2">
+                        <h5>Home</h5>
+                    </a></li>
                 <li><a href="contact.html" class="grey-text text-darken-2">
                         <h5>Contact</h5>
                     </a></li>
@@ -50,31 +31,114 @@
                         <h5>Portfolio</h5>
                     </a></li>
             </ul>
+            <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
         </div>
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+        <ul id="slide-out" class="sidenav">
+
+            <li><a href="index.html"><i class="material-icons">cloud</i>Home</a></li>
+            <li><a href="contact.html"><i class="material-icons">contacts</i>Contact</a></li>
+            <li><a href="contact.html"><i class="material-icons">burst_mode</i>Portfolio</a></li>
+            <li>
+                <div class="divider"></div>
+            </li>
+
+            <li><a class="sidenav-close"><i class="material-icons">close</i>Close</a></li>
         </ul>
 
     </nav>
     <br>
-   
     <div class="row">
-        <div class="col s12 m6">
+        <div class="col s4 center">
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/images/dance.jpg">
-                    <span class="card-title">Word Guess</span>
+                    <img src="./assets/images/city background square.jpg">
+
+
                 </div>
                 <div class="card-content">
-                    <p>Explore the different neighborhoods of Chicago with this fun Word
-                        Guess Game</p>
+                    <h5>Word Guess</h5>
+                    <p>Explore the neighborhoods of "The Windy City" with this fun Word
+                        Guess Game. Which part of Chicago will you end up in?</p>
                 </div>
                 <div class="card-action">
-                    <a href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank" class="text-grey">Website</a>
-                    <a href="https://github.com/jimilocn/Word-Guess-Game" target="_blank" class="text-grey">Github</a>
+                    <a href="https://jimilocn.github.io/Word-Guess-Game/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/Word-Guess-Game" target="_blank">Github</a>
                 </div>
             </div>
+        </div>
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/blackpink.png">
+                </div>
+                <div class="card-content">
+                    <h5>Diva</h5>
+                    <p>Release your inner Diva with BlackPink to relesae the new greatest
+                        hits for the BillBoards Top Tracks!</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://jimilocn.github.io/unit-4-game/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/unit-4-game" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/dragqueens.png">
+
+                </div>
+                <div class="card-content">
+                    <h5>Whats the Tea?</h5>
+                    <p>See how well you know the Queens from RuPaul's Drag Race throughout
+                        the seasons. Make Mama Ru Proud!</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://jimilocn.github.io/TriviaGame/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/TriviaGame" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/logo.1.png">
+
+
+                </div>
+                <div class="card-content">
+                    <h5>SRSLY?</h5>
+                    <p>Flight cancelled? Are you stuck at the airport overnight? Not a problem! Let us help you
+                        get to a hotel ASAP!</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://matthewheimark.github.io/project1/" target="_blank">Website</a>
+                    <a href="https://github.com/matthewheimark/project1" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/cherry.jpg">
+                </div>
+                <div class="card-content">
+                    <h5>Train Scheduler</h5>
+                    <p>Explore Japan on one of the most efficient train systems in the
+                        world, but make sure you're not late!</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://jimilocn.github.io/trainScheduler/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/trainScheduler" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center">
+
         </div>
     </div>
 
@@ -83,7 +147,7 @@
         <div class="container">
             <div class="row">
                 <div class="col m4 s12 center">
-                    <a class="white-text" href="www.linkedin.com/in/jimi-loc-nguyen">
+                    <a class="white-text" href="https://www.linkedin.com/in/jimi-loc-nguyen/" target="_blank">
                         <h5>Linkedin</h5>
                     </a>
 
@@ -91,12 +155,12 @@
                 </div>
                 <div class="col m4 s12 center">
                     <a class="white-text"
-                        href="https://docs.google.com/document/d/16hA0mp15azMN1fWAwkXd0oWcFXhpgxOL19_Bsbc8BUY/edit?usp=sharing">
+                        href="https://docs.google.com/document/d/16hA0mp15azMN1fWAwkXd0oWcFXhpgxOL19_Bsbc8BUY/edit?usp=sharing" target="_blank">
                         <h5>Resume</h5>
                     </a>
                 </div>
                 <div class="col m4 s12 center">
-                    <a class="white-text" href="https://github.com/jimilocn">
+                    <a class="white-text" href="https://github.com/jimilocn" target="_blank">
                         <h5>GitHub</h5>
                     </a>
                 </div>
