--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 
             <li><a href="index.html"><i class="material-icons">cloud</i>Home</a></li>
             <li><a href="contact.html"><i class="material-icons">contacts</i>Contact</a></li>
-            <li><a href="contact.html"><i class="material-icons">burst_mode</i>Portfolio</a></li>
+            <li><a href="portfolio.html"><i class="material-icons">burst_mode</i>Portfolio</a></li>
             <li>
                 <div class="divider"></div>
             </li>
