added more into portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -138,7 +138,73 @@
             </div>
         </div>
         <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/liribotphoto.jpg">
 
+
+                </div>
+                <div class="card-content">
+                    <h5>LIRI Bot</h5>
+                    <p>Backend based project similar to the SIRI on an iPhone. Find info on songs, movies and concerts with the built in searches.</p>
+                </div>
+                <div class="card-action">
+                   
+                    <a href="https://github.com/jimilocn/Liri" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/hamburger.jpg">
+
+
+                </div>
+                <div class="card-content">
+                    <h5>Hamburger Wish List</h5>
+                    <p>An application that guides the user to complete or edit a checklist of burgers that the have had or want to have in the future.</p>
+                </div>
+                <div class="card-action">
+                    <a href=" https://jimi-burger-live1.herokuapp.com/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/burger" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/friend.jpeg">
+                </div>
+                <div class="card-content">
+                    <h5>Friend Finder</h5>
+                    <p>Friend matching application that pulls forth people from a database and gives you the best match based on survey questions.</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://jimi-friendfinder-live1.herokuapp.com/" target="_blank">Website</a>
+                    <a href="https://github.com/jimilocn/FriendFinder" target="_blank">Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s4 center">
+            <div class="card">
+                <div class="card-image">
+                    <img src="./assets/images/storefront.jpeg">
+
+
+                </div>
+                <div class="card-content">
+                    <h5>BAMazon</h5>
+                    <p>A command line storefront for purchasing items on the customer side, and for managing inventory on the management side.</p>
+                </div>
+                <div class="card-action">
+                   
+                    <a href="https://github.com/jimilocn/bamazon" target="_blank">Github</a>
+                </div>
+            </div>
         </div>
     </div>
 
