--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
         <div class="col s4 center">
             <div class="card">
                 <div class="card-image">
-                    <img src="./assets/images/liribotphoto.jpg">
+                    <img src="./assets/images/robot.jpg">
 
 
                 </div>
