--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <!-- <h2 class="center brown-text"><i class="material-icons">group</i></h2> -->
                         <h2 class="center">American</h2>
 
-                        <p> Jimi hails from the lower peninsula of Mitten State. he grew up in a small farming
+                        <p> Jimi hails from the lower peninsula of Mitten State. He grew up in a small farming
                             community near Grand Rapids, and he was nutured in an environment that balances morales,
                             motivation, drive, grit, passion, creativity, and efficacy. This generated a perfect storm
                             internally to create a
@@ -118,7 +118,7 @@
                     <h3><i class="mdi-content-send brown-text"></i></h3>
                     <h2>Artistic</h2>
                     <p class="left-align">Jimi became well practiced in Flute, Clarinet, Saxophone, and Violin during
-                        his primary education. Throughout his years , he transitioned his efforts from music composition
+                        his primary education. Throughout his collegiate education he transitioned his efforts from music composition
                         and arrangement, to material arts, graphic design, and even movement and dance choreography.</p>
                 </div>
             </div>
