pulse on button

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
             <div class="col s12" id="contact">
                 <button data-target="modal1"
-                    class="btn modal-trigger btn-floating btn-large waves-effect waves-light red lighten-2"><i
+                    class="btn pulse modal-trigger btn-floating btn-large waves-effect waves-light red lighten-2"><i
                         class="material-icons">contacts</i></button>
                 <div id="modal1" class="modal">
                     <div class="modal-content">
