--- a/portfolio.html
+++ b/portfolio.html
@@ -49,6 +49,11 @@
     </nav>
     <br>
     <div class="row">
+        <div class="col s12 center grey-text text-darken-3">
+            <h2>~Portfolio of Past Projects~</h1>
+        </div>
+    </div>
+    <div class="row">
         <div class="col s4 center">
             <div class="card">
                 <div class="card-image">
